--- a/client/src/components/card/Card.module.css
+++ b/client/src/components/card/Card.module.css
@@ -1,8 +1,8 @@
-.div1{
+.cardContainer{
   flex: 0  18%;
   margin: 1%;
   box-shadow: 1px 1px 1px rgba(0,0,0,0.1);
-  transition: transform 0.1s ease-in-out;
+  transition: transform 0.3s ease-in-out;
   width: 250px;
     height: 305px;
     position: relative;
@@ -17,48 +17,45 @@
     
     
 }
-.btn{
+.cardContainer:hover{
  
-  margin: 1%;
-  box-shadow: 1px 1px 1px rgba(0,0,0,0.1);
-  
-  width: 250px;
-    height: 305px;
-   
-   background-color: #02003649;
-   border-radius: 8px;
-    justify-content: space-around;
-    font-size: 12px;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
-    display: inline-flex;
-}
-
-.div1:hover{
- 
-    transform: scale(1.05);
+    transform: scale(1.03);
+    filter: brightness(1.2);
 
 }
+.cardImg{
+  width: 100%;
+  height: 50%;
+
+}
+.cardName{
+  display: flex;
+  flex-direction: column;
+}
+
+
 body{
-  background-image: url("https://media.rawg.io/media/games/bc0/bc06a29ceac58652b684deefe7d56099.jpg");
+  background-color:  #1F2023;
 }
 .name {
    align-items: center;
     font-size: 20px;
+    font-weight: 900;
     margin-bottom: 10px;
-    color: #dec5c5c9;
-    font-style: oblique;
+    color: #efebebc9;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
-  .img {
-    max-width: 100%;
+.img {
+    width: 100%;
     height: 180px;
-   
-    
+    margin-top: -20px;
+    border-radius: 8px 8px 0px 0px;
   }
 
   .genres {
+    font-weight: 800;
     font-size: 16px;
-    color: #777;
+    color: #929292;
+    display: flex;
+    flex-direction: column;
   }
