--- a/client/src/components/searchBar/SearchBar.module.css
+++ b/client/src/components/searchBar/SearchBar.module.css
@@ -2,15 +2,12 @@
 .input{
     width: 200px;
     height: 15px;
-    padding: 12px, 16px, 12px, 16px;
+    padding: 8px;
     border-radius: 8px;
     gap: 10px;
     background: #F9F9F91A;
     outline: none;
     
-}
-.input::placeholder{
-    text-indent: 10px;
 }
 .btn{
     margin-left: 10px;
@@ -19,6 +16,30 @@
     background: #F9F9F91A;
     color: #f9f9f9;
 }
+
+.input::placeholder{
+    text-indent: 10px;
+}
+.container1{
+    margin-right: 100px;
+}
+.container{
+    background-color: yellow;
+    
+    width:200px;
+
+}
+
+.hijo{
+    width: 300px;
+    max-Height: 400px;
+    overflow-y: auto ;
+    background-color: blue;
+    position:absolute;
+    
+   
+}
+
 .name{
     background-color: aliceblue;
     width: 310px;
@@ -26,12 +47,7 @@
     font-size: small;
    
 }
-.ul{
-    display: inline-block;
-    
-}
-.search{
-    margin-left: 700px;
-    margin-top: 20px;
-    
+
+.img{
+    width: 60px;
 }
