--- a/client/src/components/card/Card.module.css
+++ b/client/src/components/card/Card.module.css
@@ -42,8 +42,10 @@ body{
     font-size: 20px;
     font-weight: 900;
     margin-bottom: 10px;
-    color: #efebebc9;
+    color: #f1f5f9;
+    font-style: oblique;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
   }
 .img {
     width: 100%;
