--- a/client/src/components/detail/Detail.module.css
+++ b/client/src/components/detail/Detail.module.css
@@ -34,13 +34,33 @@
     color: #929292;
     display: flex;
     flex-direction: column;
+    font-style: oblique;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif
   }
 .rating{
+    color: #929292;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif
 
 }
 .text{
     overflow-y: auto;
+    background-color: rgba(12, 11, 11, 0.66);
+    box-shadow: 5px 5px 3px white;
     height: 180px;
+    border-radius: 6px;
+    color: #929292;
+    font-style: oblique;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif
     
+}
+.platforms{
+    color: #929292;
+    font-style: oblique;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif
+
+}
+.released{
+    color: #929292;
+    font-style: oblique;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif
 }
