--- a/client/src/components/navbar/NavBar.module.css
+++ b/client/src/components/navbar/NavBar.module.css
@@ -31,3 +31,12 @@ align-items: center;
     font-size: 18px;
     letter-spacing: 5px;
 }
+
+.btn{
+    color: #efebebc9;
+    box-shadow: 9px 14px 6px 0px #0000001A;
+    background: linear-gradient(180deg, rgba(249, 249, 249, 0.15) 0%, rgba(249, 249, 249, 0.03) 100%);
+    border-radius: 6px;
+    height: 28px;
+    width: 127px;
+}
