ratinf, filter, order, footer

--- a/client/src/components/card/Card.module.css
+++ b/client/src/components/card/Card.module.css
@@ -1,7 +1,8 @@
 .cardContainer{
   flex: 0  18%;
   margin: 1%;
-  box-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+ /*  box-shadow: 1px 1px 1px rgba(0,0,0,0.1); */
+  box-shadow: 8px 9px 6px rgba(0,0,0,0.7);
   transition: transform 0.3s ease-in-out;
   width: 250px;
   height: 305px;
