--- a/client/src/components/form/Form.module.css
+++ b/client/src/components/form/Form.module.css
@@ -28,12 +28,15 @@
 
 .input {
     width: 100%;
-    padding: 10px;
-    font-size: 16px;
+    padding: 5px;
+    font-size: 15px;
     border-radius: 5px;
-    border: 1px solid #ddd;
+    border: 1px solid #000;
 }
-
+.input::placeholder{
+    color: #000;
+    font-style: oblique;
+}
 .inputName,
 .inputImg,
 .inputDescription,
@@ -59,6 +62,7 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;;
 }
 
-.button:hover {
+/* .button:hover {
     background-color: #1b1c1d46;
 }
+ */
