--- a/client/src/components/landing/Landing.module.css
+++ b/client/src/components/landing/Landing.module.css
@@ -38,48 +38,29 @@
 
 
 .btn {
- cursor: pointer;
- border: none;
- position:relative;
- top: 536px;
- left: 494px;
- color: hwb(205.12deg 36.81% 7.16%);
- padding: 8px 22px;
- border-radius: 6px;
- background: hsl(0deg 18% 10.89%);
- transition: all 0.2s ease;
- box-shadow: 0 0 5px cyan,
- 0 0 25px cyan;
- font-family: cursive;
- font-size: large;
- font-weight: 900;
- font-style: oblique ;
+    cursor: pointer;
+   
+    position: relative;
+    top: 536px;
+    left: 494px;
+    color: #eee1e1;
+    padding: 8px 22px;
+    background: hsl(0deg 18% 10.89%);
+    transition: all 0.2s ease;
+    box-shadow: 8px 7px 4px 1px #566161, 0 0 25px #778181;
+    
+    font-size: large;
+    font-weight: 900;
+    border-radius: 8px;
+    font-style: oblique;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ 
  
   }
   
-    .btn:hover {
-    box-shadow: 0 0 5px cyan,
-    0 0 25px cyan, 0 0 50px cyan,
-    0 0 100px cyan, 0 0 200px cyan;
+.btn:hover {
+    box-shadow: 0 0 5px rgb(94, 94, 94),
+    0 0 25px rgb(154, 154, 154), 0 0 50px rgb(197, 203, 203),
+    0 0 100px rgb(75, 85, 85), 0 0 200px rgb(116, 119, 119);
     }
   
-/* .btn:active {
-        transform: scale(0.96)
-    }
- */
-/*  .btn:before {
-    content: '';
-    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
-    position: absolute;
-    top: -2px;
-    left:-2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(5px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
-    opacity: 0;
-    transition: opacity .3s ease-in-out;
-    border-radius: 10px;
-}    */
