--- a/client/src/components/footer/Footer.module.css
+++ b/client/src/components/footer/Footer.module.css
@@ -24,3 +24,10 @@
     background-color: azure;
     border-radius: 3px;
 }
+.img3{
+  width: 30px;
+  height: 31px;
+  margin: 5px;
+  border-radius: 3px;
+
+}
