--- a/client/src/components/detail/Detail.module.css
+++ b/client/src/components/detail/Detail.module.css
@@ -39,16 +39,22 @@
   }
 .rating{
     color: #929292;
+    font-style: oblique;
+    font-weight: 800;
+    font-size: 16px;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif
 
 }
 .text{
+    width: 700px;
     overflow-y: auto;
     background-color: rgba(12, 11, 11, 0.66);
     box-shadow: 5px 5px 3px white;
     height: 180px;
     border-radius: 6px;
     color: #929292;
+    align-items: center;
+    margin-left: 40px;
     font-style: oblique;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif
     
