--- a/client/src/components/detail/Detail.module.css
+++ b/client/src/components/detail/Detail.module.css
@@ -70,3 +70,13 @@
     font-style: oblique;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif
 }
+
+.btn {
+    color: #000000c9;
+    box-shadow: 9px 14px 6px 0px #0000001A;
+    background: linear-gradient(180deg, rgba(249, 249, 249, 0.15) 0%, rgba(249, 249, 249, 0.03) 100%);
+    border-radius: 6px;
+    height: 28px;
+    width: 140px;
+    font-weight: 600;
+}
