--- a/client/src/components/form/Form.module.css
+++ b/client/src/components/form/Form.module.css
@@ -53,14 +53,20 @@
     width: fit-content;
     padding: 10px 20px;
     font-size: 16px;
-    color: #fff;
+    color: #efebebc9;
     border: none;
-    background-color: #007BFF;
-    border-radius: 5px;
+    background: linear-gradient(180deg, rgba(249, 249, 249, 0.15) 0%, rgba(249, 249, 249, 0.03) 100%);
+    border-radius: 6px ;
     cursor: pointer;
+    border: 1px solid #000;
     align-self: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;;
+    box-shadow: 9px 14px 6px 0px #0000001A;
 }
+
+
+
+
 
 /* .button:hover {
     background-color: #1b1c1d46;
