--- a/client/src/components/form/Form.module.css
+++ b/client/src/components/form/Form.module.css
@@ -53,15 +53,15 @@
     width: fit-content;
     padding: 10px 20px;
     font-size: 16px;
-    color: #efebebc9;
+    color: #fffbfb;
     border: none;
-    background: linear-gradient(180deg, rgba(249, 249, 249, 0.15) 0%, rgba(249, 249, 249, 0.03) 100%);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.783) 0%, rgba(249, 249, 249, 0.03) 100%);
     border-radius: 6px ;
     cursor: pointer;
-    border: 1px solid #000;
+    border: 1px solid #d6d4d4;
     align-self: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;;
-    box-shadow: 9px 14px 6px 0px #0000001A;
+    box-shadow: 9px 14px 6px 0px #00000063;
 }
 
 
